<resources>
    <string name="app_name">My Application</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="plus">+</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="minus">−</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="times">×</string>
    <string name="_0">0</string>
    <string name="equals">=</string>
    <string name="divide">÷</string>
    <string name="limpar">Limpar</string>
    <string name="Resultado">Calculadora Simples</string>
    <string name="Digite_o_número">Resultado</string>
    <string name="digite_o_n_mero">Digite_o_número</string>
    <string name="resultado">Resultado: </string>
</resources>