<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/digite_o_n_mero"
        android:inputType="none"
        android:focusable="false"
        android:gravity="end"
        android:textSize="32sp"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/resultado"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextResult" />

    <GridLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"
        app:layout_constraintBottom_toTopOf="@id/buttonClear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:columnCount="4"
        android:rowCount="5">

        <Button android:id="@+id/button1" android:text="@string/_1" />
        <Button android:id="@+id/button2" android:text="@string/_2" />
        <Button android:id="@+id/button3" android:text="@string/_3" />
        <Button android:id="@+id/buttonAdd" android:text="@string/plus" />

        <Button android:id="@+id/button4" android:text="@string/_4" />
        <Button android:id="@+id/button5" android:text="@string/_5" />
        <Button android:id="@+id/button6" android:text="@string/_6" />
        <Button android:id="@+id/buttonSubtract" android:text="@string/minus" />

        <Button android:id="@+id/button7" android:text="@string/_7" />
        <Button android:id="@+id/button8" android:text="@string/_8" />
        <Button android:id="@+id/button9" android:text="@string/_9" />
        <Button android:id="@+id/buttonMultiply" android:text="@string/times" />

        <Button android:id="@+id/button0" android:text="@string/_0" />
        <Button android:id="@+id/buttonEquals" android:text="@string/equals" />
        <Button android:id="@+id/buttonDivide" android:text="@string/divide" />

    </GridLayout>

    <Button
        android:id="@+id/buttonClear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/limpar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>